# gharc

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt
docs/: CITATION.cff
src/gharc/: cli.py  filters.py  orchestrator.py  storage.py  streamer.py  utils.py
tests/: test_filters.py  test_streamer.py
tests/.github/workflows/: test.yml
